# cpp-lib-utils

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  MakeVersion.cmake
include/Utils/: Clock.hpp  Env.hpp  Image.hpp  Logger.hpp  PluginLoader.hpp  Utils.hpp
include/Utils/Interfaces/: IPlugin.hpp
scripts/unix/: build.sh
src/: env.cpp  image.cpp  logger.cpp  utils.cpp
